--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet"  href="styles.css">
     <title>a calculator like the iphone</title>
+    <link rel="icon" type=""  href="python-logo.png">
 </head>
 <body>
      
