--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="styles.css">
     <title>a calculator like the iphone</title>
-    <link rel="icon" type="png" href="python-logo.png">
+    <link rel="icon" type="images/png" href="python-logo.png">
 </head>
 <body>
      
